<resources>
    <string name="app_name">pidtrans_trans</string>
    <string name="set_point_deg">Set Point (Deg)</string>
    <string name="tilt_p">Tilt P</string>
    <string name="tilt_d">Tilt D</string>
    <string name="speed_p">Wheel Speed P</string>
    <string name="expWeight">Exponential Weight</string>
    <string name="maximum_absolute_tilt_angle">Maximum Absolute Tilt Angle</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qr_button_show">Show QR Code</string>
    <string name="qr_code_content">qr_code</string>
    <string name="back_button">Back</string>
</resources>
