<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PID_GUI"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewSetPoint"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/set_point_deg"
        android:textAlignment="center" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarSetPoint"
        android:valueFrom="-10.0"
        android:valueTo="10.0"
        android:stepSize="0.1"
        android:value="4.8"
        android:layout_height="50dp"
        android:layout_width="match_parent"/>

    <TextView
        android:id="@+id/textViewTiltP"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/tilt_p" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarTiltP"
        android:valueFrom="-80.0"
        android:valueTo="0.0"
        android:stepSize="0.1"
        android:value="-35.0"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/textViewTiltD"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/tilt_d"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarTiltD"
        android:valueFrom="0.0"
        android:valueTo="1.2"
        android:stepSize="0.01"
        android:value="1.00"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/textViewWheelSpeedP"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/speed_p"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarWheelSpeedP"
        android:valueFrom="-1.0"
        android:valueTo="1.0"
        android:stepSize="0.01"
        android:value="-0.40"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/textViewExponentialWeight"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/expWeight"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarExponentialWeight"
        android:valueFrom="0.0"
        android:valueTo="1.0"
        android:stepSize="0.001"
        android:value="0.25"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/textViewMaxAbsTilt"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/maximum_absolute_tilt_angle"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarMaxAbsTilt"
        android:valueFrom="-90.0"
        android:valueTo="90.0"
        android:stepSize="0.1"
        android:value="6.5"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>



</LinearLayout>